src/dashboard/components/large-banner/large-banner.scss
.kb-large-banner {
	border-radius: 16px;
	border: 1px solid #2d3748;
	background: #161a1e;
	padding: 48px;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	justify-content: space-between;
	gap: 24px;
	margin-bottom: 48px;
	position: relative;
	overflow: hidden;
	min-height: calc(400px - (48px * 2));

	@media only screen and (min-width: 768px) {
		margin-bottom: 60px;
	}
	.uplink-authorize {
		padding: 12px 24px 12px 24px;
		font-size: 14px;
		height: auto;
		display: inline-flex;
		gap: 4px;
		color: #FFFFFF;
		box-shadow: none;
		border-radius: 4px;
		background: #0073E6;
		text-decoration: none;
	}
	.kadence-update-ai-wizard {
		color:white;
		text-decoration: none;
		&.components-button:not(:disabled,[aria-disabled=true]):active {
			color: white;
			opacity: .8;
		}
	}
	.kadence-open-ai-button {
		&.components-button {
			background: #0073E6;
			color: #fff;
			border-radius: 4px;
			padding: 12px 24px;
			height: auto;
			font-size: 14px;
			&:not(:disabled,[aria-disabled=true]):hover {
				background: #005bb5;
				color: #fff;
			}
		}
	}
	.kb-large-banner__secondary-link {
		display: inline-block;
		margin-top: 12px;
		color: rgba(255, 255, 255, 0.75);
		font-size: 14px;
		text-decoration: underline;
		text-underline-offset: 3px;
		&:hover {
			color: #fff;
		}
	}
	.disabled-authorize-note {
		background: #891c23;
		padding: 0.5em 1em;
		border-radius: 2px;
		border: 1px solid #d8343d;
	}
}

.kb-large-banner__logo {
	position: relative;
	z-index: 2;
	svg {
		width: 190px;
	}
}

.kb-large-banner__content {
	color: #fff;
	position: relative;
	z-index: 2;
}

.kb-large-banner__heading {
	font-size: 52px;
	font-style: normal;
	font-weight: 600;
	line-height: 110%;
	letter-spacing: -1.04px;
	margin-bottom: 16px;

	svg {
		fill: currentColor;
	}
}

.kb-large-banner__subheading {
	font-size: 16px;
	font-weight: normal;
	line-height: 175%;
	letter-spacing: 0.32px;
	margin-bottom: 24px;
	max-width: 530px;
}

.kb-large-banner__media {
	position: absolute;
	inset: 0;

	&::before {
		content: "";
		position: absolute;
		inset: 0;
		background: linear-gradient(1deg, #000 1.23%, rgba(0, 0, 0, 0) 98.81%);
		z-index: 1;
	}

	img {
		position: absolute;
		inset: 0;
		width: 100%;
		height: 100%;
		object-fit: cover;
		object-position: center center;
		z-index: 0;
	}
}

.kb-large-banner__tooltip {
	position: absolute;
	right: 48px;
	bottom: 48px;
	z-index: 2;
}
.components-popover.kb-large-banner__tooltip_popup .components-popover__content {
	background-color: #fff;
	color: #000;
	border-radius: 8px;
	font-size: 18px;
	font-weight: 500;
	line-height: 110%;
	letter-spacing: 0.36px;
	padding: 12px 16px;
	min-width: max-content;
}

